--- a/kubernetes-config/locust-worker-controller.yaml
+++ b/kubernetes-config/locust-worker-controller.yaml
@@ -30,11 +30,11 @@ spec:
     spec:
       containers:
         - name: locust-worker
-          image: gcr.io/[PROJECT_ID]/locust-tasks:latest
+          image: gcr.io/jeeek-dev/locust-tasks:latest
           env:
             - name: LOCUST_MODE
               value: worker
             - name: LOCUST_MASTER
               value: locust-master
             - name: TARGET_HOST
-              value: https://[TARGET_HOST]
+              value: https://jeeek-dev.appspot.com
